--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
         <button class="btn" id="box3"></button>
         <button class="btn" id="box4"></button>
     </section> 
-    <script src="script.js"></script>
+    <script src=""</script>
 </body>
 </html>
